Refactor about.html with updated styles and meta tags

--- a/about.html
+++ b/about.html
@@ -1,122 +1,16 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-  <title>About – Mango Time</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link href="https://fonts.googleapis.com/css2?family=Permanent+Marker&display=swap" rel="stylesheet">
-  <style>
-    body {
-      margin: 0;
-      font-family: Arial, sans-serif;
-      background: #0b0c10;
-      color: #f0f0f0;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      text-align: center;
-      height: 100vh;
-      padding: 20px;
-    }
-
-    .container {
-      max-width: 90%;
-    }
-
-    h1 {
-      font-size: clamp(42px, 6vw, 72px);
-      color: #ff7a00;
-      text-shadow: 0 0 12px rgba(255,122,0,0.7);
-      margin-bottom: 30px;
-    }
-
-    p {
-      font-size: clamp(18px, 3vw, 28px);
-      line-height: 1.6;
-      margin-bottom: 40px;
-    }
-
-    .btn {
-      display: inline-block;
-      margin: 10px;
-      padding: 14px 36px;
-      font-size: 20px;
-      color: #fff;
-      background: #ff7a00;
-      text-decoration: none;
-      border-radius: 10px;
-      transition: 0.3s;
-    }
-
-    .btn:hover {
-      background: #ff9a2f;
-      transform: scale(1.05);
-    }
-
-    .credit {
-      margin-top: 30px;
-      font-size: 22px;
-      color: #f0f0f0;
-      font-family: 'Permanent Marker', cursive;
-    }
-
-    /* Sticky header */
-    header {
-      position: fixed;
-      top: 0;
-      width: 100%;
-      background: rgba(0, 0, 0, 0.95);
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      padding: 8px 20px; /* balacalaşdırıldı */
-      box-shadow: 0 2px 6px rgba(0,0,0,0.3);
-      z-index: 1000;
-    }
-
-    header h2 {
-      margin: 0;
-      font-size: 22px; /* balacalaşdırıldı */
-      color: #ff7a00;
-      text-shadow: 0 0 6px #ff7a00, 0 0 10px #ff9a2f, 0 0 14px #ffd700;
-    }
-
-    nav a {
-      margin-left: 15px;
-      text-decoration: none;
-      color: #f0f0f0;
-      font-size: 16px; /* balacalaşdırıldı */
-      transition: 0.3s;
-    }
-
-    nav a:hover {
-      color: #ff7a00;
-    }
-  </style>
-</head>
-<body>
-
-  <header>
-    <h2>Mango Time</h2>
-    <nav>
-      <a href="index.html">Home</a>
-      <a href="about.html">About</a>
-      <a href="vision.html">Vision</a>
-      <a href="contact.html">Contact</a>
-    </nav>
-  </header>
-
-  <div class="container">
-    <h1>About Mango Time</h1>
-
-    <p>
-      Mango Time is a future-focused technology company founded on December 23, 2025 by <strong>Abraham hsjaze</strong>.<br><br>
-      Our vision is to grow into a major global technology brand with a strong focus on innovation and artificial intelligence. We aim to design and develop our own AI systems that can create real value for people and businesses.<br><br>
-      Mango Time is not just a company — it is a mindset. We believe in long-term thinking, smart solutions, and building technologies that shape the future. Our journey has just begun, and our goal is to achieve great things through creativity, discipline, and ambition.
-    </p>
-
-    <a href="index.html" class="btn">Home</a>
-    <div class="credit">Create hsjaze</div>
-  </div>
-
-</body>
-</html>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Mango Time - About</title>
+<style>
+body {margin:0;font-family:Arial, sans-serif;background:#000;color:white;text-align:center;}
+header{display:flex;justify-content:space-between;align-items:center;padding:10px 40px;}
+.logo{font-size:26px;font-weight:600;color:#00fff7;text-shadow:0 0 8px #00fff7;}
+nav a{margin:0 10px;text-decoration:none;color:white;font-size:14px;}
+nav a:hover{color:#00fff7;}
+section{padding:80px 20px;max-width:900px;margin:auto;}
+h2{font-size:36px;margin-bottom:20px;color:#ffd700;}
+p{font-size:24px;margin-bottom:40px;}
+.lang-switch{position:fixed;bottom:15px;right:20px;font-size:14px;opacity:.7;}
