--- a/contact.html
+++ b/contact.html
@@ -10,10 +10,10 @@ header{display:flex;justify-content:space-between;align-items:center;padding:10p
 .logo{font-size:26px;font-weight:600;color:#00fff7;text-shadow:0 0 8px #00fff7;}
 nav a{margin:0 10px;text-decoration:none;color:white;font-size:14px;}
 nav a:hover{color:#00fff7;}
-section{padding:80px 20px;max-width:900px;margin:auto;}
+section{padding:80px 20px;max-width:500px;margin:auto;}
 h2{font-size:36px;margin-bottom:20px;color:#ffd700;}
 p{font-size:24px;margin-bottom:10px;}
-a.social{color:#00fff7;text-decoration:none;font-size:20px;margin:0 10px;}
+a.social{color:#00fff7;text-decoration:none;font-size:20px;}
 a.social:hover{color:#ffd700;}
 .lang-switch{position:fixed;bottom:15px;right:20px;font-size:14px;opacity:.7;}
 .lang-switch button{background:transparent;border:1px solid #00fff7;color:#00fff7;margin-left:5px;cursor:pointer;}
@@ -33,9 +33,12 @@ a.social:hover{color:#ffd700;}
 
 <section id="contact">
   <h2 data-key="contactTitle">Contact</h2>
-  <p>Email: <a class="social" href="mailto:hsjazebusiness@gmail.com">hsjazebusiness@gmail.com</a></p>
-  <p>Instagram: <a class="social" href="https://www.instagram.com/themangotime" target="_blank">@themangotime</a></p>
-  <p>TikTok: <a class="social" href="https://www.tiktok.com/@themangotimecompany" target="_blank">@themangotimecompany</a></p>
+  <p>Email:</p>
+  <p><a class="social" href="mailto:hsjazebusiness@gmail.com">hsjazebusiness@gmail.com</a></p>
+  <p>Instagram:</p>
+  <p><a class="social" href="https://www.instagram.com/themangotime" target="_blank">@themangotime</a></p>
+  <p>TikTok:</p>
+  <p><a class="social" href="https://www.tiktok.com/@themangotimecompany" target="_blank">@themangotimecompany</a></p>
 </section>
 
 <div class="lang-switch">
@@ -46,7 +49,18 @@ a.social:hover{color:#ffd700;}
 
 <script>
 const translations={en:{logo:"Mango Time",navHome:"Home",navAbout:"About",navVision:"Vision",navContact:"Contact",contactTitle:"Contact"},tr:{logo:"Mango Time",navHome:"Home",navAbout:"About",navVision:"Vision",navContact:"Contact",contactTitle:"Contact"},es:{logo:"Mango Time",navHome:"Home",navAbout:"About",navVision:"Vision",navContact:"Contact",contactTitle:"Contact"}};
-function setLang(lang){document.querySelectorAll("[data-key]").forEach(el=>{el.textContent=translations[lang][el.dataset.key];});}
+
+function setLang(lang){
+  localStorage.setItem('lang', lang);
+  document.querySelectorAll("[data-key]").forEach(el=>{
+    if(translations[lang][el.dataset.key]) el.textContent=translations[lang][el.dataset.key];
+  });
+}
+
+window.onload = function(){
+  const lang = localStorage.getItem('lang') || 'en';
+  setLang(lang);
+};
 </script>
 
 </body>
