--- a/index.html
+++ b/index.html
@@ -1,25 +1,68 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Mango Time</title>
-<script src="auth.js"></script>
 <style>
-body { background: #000; color: #fff; text-align: center; font-family: Arial, sans-serif; }
-nav a { margin: 0 10px; color: cyan; text-decoration: none; }
+body {
+  margin: 0;
+  font-family: Arial, sans-serif;
+  background-color: black;
+  color: white;
+  text-align: center;
+}
+nav {
+  background-color: #111;
+  padding: 10px;
+}
+nav a {
+  color: cyan;
+  text-decoration: none;
+  margin: 0 15px;
+  font-weight: bold;
+}
+h1 {
+  font-size: 3em;
+  margin-top: 50px;
+}
+p {
+  font-size: 1.5em;
+}
+button {
+  padding: 10px 20px;
+  font-size: 1em;
+  margin: 10px;
+  cursor: pointer;
+  background-color: cyan;
+  border: none;
+  border-radius: 5px;
+  color: black;
+}
+footer {
+  margin-top: 50px;
+  font-size: 0.9em;
+  color: #aaa;
+}
 </style>
 </head>
-<body onload="renderAuthButtons()">
+<body>
 
 <nav>
   <a href="index.html">Home</a>
   <a href="about.html">About</a>
   <a href="vision.html">Vision</a>
   <a href="contact.html">Contact</a>
-  <span id="auth-buttons"></span>
 </nav>
 
 <h1>Welcome to Mango Time</h1>
-<p>The future of technology starts here</p>
+<p>Discover the future of technology with Mango Time 🚀</p>
+
+<button onclick="window.location.href='about.html'">About</button>
+
+<footer>
+  Created by HSJAZE
+</footer>
 
 </body>
 </html>
