--- a/contact.html
+++ b/contact.html
@@ -3,65 +3,27 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Mango Time - Contact</title>
+<title>Contact - Mango Time</title>
 <style>
-body {margin:0;font-family:Arial, sans-serif;background:#000;color:white;text-align:center;}
-header{display:flex;justify-content:space-between;align-items:center;padding:10px 40px;}
-.logo{font-size:26px;font-weight:600;color:#00fff7;text-shadow:0 0 8px #00fff7;}
-nav a{margin:0 10px;text-decoration:none;color:white;font-size:14px;}
-nav a:hover{color:#00fff7;}
-section{padding:80px 20px;max-width:500px;margin:auto;}
-h2{font-size:36px;margin-bottom:20px;color:#ffd700;}
-p{font-size:24px;margin-bottom:10px;}
-a.social{color:#00fff7;text-decoration:none;font-size:20px;}
-a.social:hover{color:#ffd700;}
-.lang-switch{position:fixed;bottom:15px;right:20px;font-size:14px;opacity:.7;}
-.lang-switch button{background:transparent;border:1px solid #00fff7;color:#00fff7;margin-left:5px;cursor:pointer;}
+body { background-color: black; color: white; font-family: Arial, sans-serif; text-align: center; }
+nav a { color: cyan; margin: 0 15px; text-decoration: none; font-weight: bold; }
+h1 { font-size: 2.5em; margin-top: 50px; }
+p { font-size: 1.3em; margin: 10px; }
 </style>
 </head>
 <body>
 
-<header>
-  <div class="logo" data-key="logo">Mango Time</div>
-  <nav>
-    <a href="index.html" data-key="navHome">Home</a>
-    <a href="about.html" data-key="navAbout">About</a>
-    <a href="vision.html" data-key="navVision">Vision</a>
-    <a href="contact.html" data-key="navContact">Contact</a>
-  </nav>
-</header>
+<nav>
+  <a href="index.html">Home</a>
+  <a href="about.html">About</a>
+  <a href="vision.html">Vision</a>
+  <a href="contact.html">Contact</a>
+</nav>
 
-<section id="contact">
-  <h2 data-key="contactTitle">Contact</h2>
-  <p>Email:</p>
-  <p><a class="social" href="mailto:hsjazebusiness@gmail.com">hsjazebusiness@gmail.com</a></p>
-  <p>Instagram:</p>
-  <p><a class="social" href="https://www.instagram.com/themangotime" target="_blank">@themangotime</a></p>
-  <p>TikTok:</p>
-  <p><a class="social" href="https://www.tiktok.com/@themangotimecompany" target="_blank">@themangotimecompany</a></p>
-</section>
-
-<div class="lang-switch">
-  <button onclick="setLang('en')">EN</button>
-  <button onclick="setLang('tr')">TR</button>
-  <button onclick="setLang('es')">ES</button>
-</div>
-
-<script>
-const translations={en:{logo:"Mango Time",navHome:"Home",navAbout:"About",navVision:"Vision",navContact:"Contact",contactTitle:"Contact"},tr:{logo:"Mango Time",navHome:"Home",navAbout:"About",navVision:"Vision",navContact:"Contact",contactTitle:"Contact"},es:{logo:"Mango Time",navHome:"Home",navAbout:"About",navVision:"Vision",navContact:"Contact",contactTitle:"Contact"}};
-
-function setLang(lang){
-  localStorage.setItem('lang', lang);
-  document.querySelectorAll("[data-key]").forEach(el=>{
-    if(translations[lang][el.dataset.key]) el.textContent=translations[lang][el.dataset.key];
-  });
-}
-
-window.onload = function(){
-  const lang = localStorage.getItem('lang') || 'en';
-  setLang(lang);
-};
-</script>
+<h1>Contact Mango Time</h1>
+<p>Email: hsjazebusiness@gmail.com</p>
+<p>Instagram: themangotime</p>
+<p>TikTok: themangotimecompany</p>
 
 </body>
 </html>
